--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -129,6 +129,7 @@ executables:
     - aeson >= 2 && <3
     - blaze-html > 0.9 && < 1
     - servant-server > 0.19 && < 0.30
+    - servant-blaze > 0.9 && < 0.12
     - template-haskell >=2.18 && <2.19
     - warp > 3.3 && < 4
 
@@ -174,6 +175,15 @@ tests:
     main:               main.hs
     source-dirs:      ./test/restapi
     dependencies: 
+    - random
+    - aeson >= 2 && <3
+    - http-client > 0.7 && < 0.8
+    - req > 3.10 && < 3.20
+    - blaze-html > 0.9 && < 1
+    - servant-server > 0.19 && < 0.30
+    - servant-blaze > 0.9 && < 0.12
+    - template-haskell >=2.18 && <2.19
+    - warp > 3.3 && < 4
     - tasty >= 0.11 && < 1.6
     - tasty-hspec >= 1.1 && < 1.3
     - tasty-hedgehog >= 0.1 && <= 1.4
