--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -128,10 +128,19 @@ executables:
     dependencies:
     - aeson >= 2 && <3
     - blaze-html > 0.9 && < 1
+    - http-client > 0.7
     - servant-server > 0.19 && < 0.30
+    - servant-client > 0.18 && < 0.30
     - servant-blaze > 0.9 && < 0.12
     - template-haskell >=2.18 && <2.19
     - warp > 3.3 && < 4
+
+  dependentTypes:
+    main:               main.hs
+    source-dirs:        ./src/dependentTypes
+    dependencies:
+    - singletons > 3 && < 4
+    - singletons-th > 3 && < 4
 
 internal-libraries: {}
 
@@ -180,7 +189,9 @@ tests:
     - http-client > 0.7 && < 0.8
     - req > 3.10 && < 3.20
     - blaze-html > 0.9 && < 1
+    - http-client > 0.7
     - servant-server > 0.19 && < 0.30
+    - servant-client > 0.18 && < 0.30
     - servant-blaze > 0.9 && < 0.12
     - template-haskell >=2.18 && <2.19
     - warp > 3.3 && < 4
@@ -190,5 +201,18 @@ tests:
     - hspec >= 0.1 && <= 3
     - hedgehog >= 0.5 && < 1.2
     - template-haskell >=2.18 && <2.19
+
+  dependentTypes-test:
+    main:               main.hs
+    source-dirs:        ./test/dependentTypes
+    dependencies:
+    - singletons > 3 && < 4
+    - singletons-th > 3 && < 4
+    - template-haskell >=2.18 && <2.19
+    - tasty >= 0.11 && < 1.6
+    - tasty-hspec >= 1.1 && < 1.3
+    - tasty-hedgehog >= 0.1 && <= 1.4
+    - hspec >= 0.1 && <= 3
+    - hedgehog >= 0.5 && < 1.2
 
 benchmarks: {}
