--- a/haskell/haskellInDepthGHC9/hie.yaml
+++ b/haskell/haskellInDepthGHC9/hie.yaml
@@ -20,3 +20,5 @@ cradle:
       component: haskellInDepthGHC9:exe:dependentTypes
     - path: "./test/dependentTypes/"
       component: haskellInDepthGHC9:test:dependentTypes-test
+    - path: "./src/singletons/part3"
+      component: haskellInDepthGHC9:exe:singletonsPart3
