haskell: Radars with dependent types

--- a/haskell/haskellInDepthGHC9/hie.yaml
+++ b/haskell/haskellInDepthGHC9/hie.yaml
@@ -24,3 +24,7 @@ cradle:
       component: haskellInDepthGHC9:exe:singletonsPart3
     - path: "./src/singletons/part4"
       component: haskellInDepthGHC9:exe:singletonsPart4
+    - path: "./src/scratch"
+      component: haskellInDepthGHC9:exe:scratch
+    - path: "./src/radarSafe"
+      component: haskellInDepthGHC9:exe:radarSafe
