--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -129,6 +129,9 @@ executables:
     - singletons-base >= 3 && < 4
     - fin > 0.2 && < 0.3
     - dec > 0.0.4 && < 1
+    - tasty >= 0.11 && < 1.6
+    - tasty-hspec >= 1.1 && < 1.3
+    - hspec >= 0.1 && <= 3
 
   rpc-lib:
     main:               main.hs
@@ -183,7 +186,6 @@ executables:
     - template-haskell >=2.18 && <2.19
 
   singletonsPart3:
-    description:  https://blog.jle.im/entry/introduction-to-singletons-3.html
     main:         main.hs
     source-dirs:  ./src/singletons/part3/
     dependencies:
@@ -193,7 +195,6 @@ executables:
     ghc-options:
     - -Werror=incomplete-patterns
   singletonsPart4:
-    description:  https://blog.jle.im/entry/introduction-to-singletons-4.html
     main:         main.hs
     source-dirs:  ./src/singletons/part4/
     dependencies:
