--- a/haskell/haskellInDepthGHC9/hie.yaml
+++ b/haskell/haskellInDepthGHC9/hie.yaml
@@ -28,3 +28,5 @@ cradle:
       component: haskellInDepthGHC9:exe:scratch
     - path: "./src/radarSafe"
       component: haskellInDepthGHC9:exe:radarSafe
+    - path: "./src/stream"
+      component: haskellInDepthGHC9:exe:stream
