haskell: streaming library play

--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -94,6 +94,8 @@ executables:
     - singletons-base >= 3 && < 4
     - fin > 0.2 && < 0.3
     - dec > 0.0.4 && < 1
+    - streaming > 0.2 && <0.3
+    - free > 5.1 && < 6
     - optparse-applicative >= 0.17 && < 0.20
     ghc-options: []
     # - -ddump-to-file
@@ -204,11 +206,12 @@ executables:
     ghc-options:
     - -Werror=incomplete-patterns
 
-  stream:
+  simplestream:
     main:               main.hs
-    source-dirs:        ./src/stream
+    source-dirs:        ./src/simplestream
     dependencies: 
     - haskellInDepthGHC9
+    - free > 5.1 && < 6
     - optparse-applicative >= 0.17 && < 0.20
     ghc-options: []
 
@@ -227,6 +230,8 @@ tests:
     - singletons-base >= 3 && < 4
     - fin > 0.2 && < 0.3
     - dec > 0.0.4 && < 1
+    - streaming > 0.2 && <0.3
+    - free > 5.1 && < 6
     - tasty >= 0.11 && < 1.6
     - tasty-hspec >= 1.1 && < 1.3
     - tasty-hedgehog >= 0.1 && <= 1.4
@@ -293,11 +298,12 @@ tests:
     - hspec >= 0.1 && <= 3
     - hedgehog >= 0.5 && < 1.2
 
-  stream-test:
+  simplestream-test:
     main:               main.hs
-    source-dirs:        ./test/stream
+    source-dirs:        ./test/simplestream
     dependencies: 
     - haskellInDepthGHC9
+    - free > 5.1 && < 6
     - tasty >= 0.11 && < 1.6
     - tasty-hspec >= 1.1 && < 1.3
     - tasty-hedgehog >= 0.1 && <= 1.4
