--- a/haskell/haskellInDepthGHC9/hie.yaml
+++ b/haskell/haskellInDepthGHC9/hie.yaml
@@ -28,7 +28,7 @@ cradle:
       component: haskellInDepthGHC9:exe:scratch
     - path: "./src/radarSafe"
       component: haskellInDepthGHC9:exe:radarSafe
-    - path: "./src/stream"
-      component: haskellInDepthGHC9:exe:stream
-    - path: "./test/stream"
-      component: haskellInDepthGHC9:test:stream-test
+    - path: "./src/simplestream"
+      component: haskellInDepthGHC9:exe:simplestream
+    - path: "./test/simplestream"
+      component: haskellInDepthGHC9:test:simplestream-test
