--- a/haskell/haskellInDepthGHC9/stack.yaml
+++ b/haskell/haskellInDepthGHC9/stack.yaml
@@ -4,4 +4,5 @@ compiler: ghc-9.2.4
 packages:
 - .
 
-extra-deps: []
+extra-deps: 
+- streaming-utils-0.2.3.0@sha256:932c804c55c261e0d98fe0288fa11936ba972af9ff1f3758e8b2de5852b1a321,4093
