--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -340,4 +340,13 @@ tests:
     - optparse-applicative >= 0.17 && < 0.20
     ghc-options: []
 
+  delimitedContinuation-test:
+    main:               main.hs
+    source-dirs:        ./test/delimitedContinuation
+    dependencies:
+    - free > 5.1 && < 6
+    - tasty >= 0.11 && < 1.6
+    - tasty-hspec >= 1.1 && < 1.3
+    - hspec >= 0.1 && <= 3
+
 benchmarks: {}
