--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -324,6 +324,8 @@ tests:
     - tasty >= 0.11 && < 1.6
     - tasty-hspec >= 1.1 && < 1.3
     - hspec >= 0.1 && <= 3
+    - tasty-hedgehog >= 0.1 && <= 1.4
+    - hedgehog >= 0.5 && < 1.2
     - random
     - containers >= 0.6 && < 0.7
     ghc-options: []
