--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -351,4 +351,15 @@ tests:
     - tasty-hspec >= 1.1 && < 1.3
     - hspec >= 0.1 && <= 3
 
+  read-test:
+    main:               main.hs
+    source-dirs:        ./test/read
+    dependencies:
+    - free > 5.1 && < 6
+    - tasty >= 0.11 && < 1.6
+    - tasty-hspec >= 1.1 && < 1.3
+    - hspec >= 0.1 && <= 3
+    - tasty-hedgehog >= 0.1 && <= 1.4
+    - hedgehog >= 0.5 && < 1.2
+
 benchmarks: {}
