--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -229,6 +229,18 @@ executables:
     - optparse-applicative >= 0.17 && < 0.20
     ghc-options: []
 
+  readp:
+    main:               main.hs
+    source-dirs:        ./src/readp
+    dependencies:
+    - free > 5.1 && < 6
+
+  cps:
+    main:               main.hs
+    source-dirs:        ./src/cps
+    dependencies:
+    - free > 5.1 && < 6
+
 internal-libraries: {}
 
 tests:
@@ -351,9 +363,9 @@ tests:
     - tasty-hspec >= 1.1 && < 1.3
     - hspec >= 0.1 && <= 3
 
-  read-test:
+  readp-test:
     main:               main.hs
-    source-dirs:        ./test/read
+    source-dirs:        ./test/readp
     dependencies:
     - free > 5.1 && < 6
     - tasty >= 0.11 && < 1.6
@@ -361,5 +373,12 @@ tests:
     - hspec >= 0.1 && <= 3
     - tasty-hedgehog >= 0.1 && <= 1.4
     - hedgehog >= 0.5 && < 1.2
+
+  cps-test:
+    main:               main.hs
+    source-dirs:        ./test/cps
+    dependencies:
+    - free > 5.1 && < 6
+    - hspec >= 0.1 && <= 3
 
 benchmarks: {}
