--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -459,4 +459,17 @@ tests:
     - hspec >= 0.1 && <= 3
 
 
-benchmarks: {}
+benchmarks: 
+  covid-bench:
+    main:               main.hs
+    source-dirs:        ./benchmark/covid
+    dependencies:
+    - haskellInDepthGHC9
+    - attoparsec > 0.10 && < 0.20
+    - resourcet > 1.2.0 && < 1.3.0
+    - streaming > 0.2 && <0.3
+    - streaming-utils > 0.2 && < 0.3
+    - streaming-bytestring > 0.2 && < 0.3
+    - lens > 4.15
+    - criterion >= 1.5.12 && < 2
+
