--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -265,7 +265,12 @@ executables:
     - streaming-bytestring > 0.2 && < 0.3
     - lens > 4.15
 
-
+  lens:
+    main:               main.hs
+    source-dirs:        ./src/lens
+    dependencies:
+    - haskellInDepthGHC9
+    - lens > 4.15
 
 internal-libraries: {}
 
@@ -458,6 +463,13 @@ tests:
     - tasty-hspec >= 1.1 && < 1.3
     - hspec >= 0.1 && <= 3
 
+  lens-test:
+    main:               main.hs
+    source-dirs:        ./test/lens
+    dependencies:
+    - haskellInDepthGHC9
+    - lens > 4.15
+    - hspec >= 0.1 && <= 3
 
 benchmarks: 
   covid-bench:
