--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -271,6 +271,9 @@ executables:
     dependencies:
     - haskellInDepthGHC9
     - lens > 4.15
+    - fin > 0.2 && < 0.3
+    - dec > 0.0.4 && < 1
+    - singletons > 3 && < 4
 
 internal-libraries: {}
 
@@ -469,6 +472,9 @@ tests:
     dependencies:
     - haskellInDepthGHC9
     - lens > 4.15
+    - fin > 0.2 && < 0.3
+    - dec > 0.0.4 && < 1
+    - singletons > 3 && < 4
     - hspec >= 0.1 && <= 3
 
 benchmarks: 
