--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -135,6 +135,7 @@ executables:
     - aeson >= 2 && <3
     - criterion >= 1.5.12 && < 2
     - timeit >= 2.0 && < 3
+    - attoparsec > 0.10 && < 0.20
     - template-haskell >=2.18 && <2.19
     - haskell-src-exts >= 1.20 && <1.24
     - haskell-src-meta >= 0.6 && < 0.9
