--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -278,6 +278,10 @@ executables:
     - fin > 0.2 && < 0.3
     - dec > 0.0.4 && < 1
     - singletons > 3 && < 4
+    - template-haskell >=2.18 && <2.19
+    - haskell-src-exts >= 1.20 && <1.24
+    - haskell-src-meta >= 0.6 && < 0.9
+    - th-utilities >= 0.2.3 && <= 0.2.5.0
 
   template:
     main:               main.hs
@@ -503,6 +507,10 @@ tests:
     - dec > 0.0.4 && < 1
     - singletons > 3 && < 4
     - hspec >= 0.1 && <= 3
+    - template-haskell >=2.18 && <2.19
+    - haskell-src-exts >= 1.20 && <1.24
+    - haskell-src-meta >= 0.6 && < 0.9
+    - th-utilities >= 0.2.3 && <= 0.2.5.0
 
   template-test:
     main:               main.hs
