--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -27,6 +27,8 @@ dependencies:
 - mtl >= 2.0 && < 2.3
 - monad-logger >= 0.3.37 && < 0.4
 - transformers >= 0.5 && < 0.6
+- transformers-base >= 0.4 && < 1
+- monad-control >= 1 && < 2
 - time >=1.8 && <1.12
 - bytestring >=0.10 && <0.12
 - text >=1.2 && <1.3
@@ -36,7 +38,8 @@ dependencies:
 - filepath >= 1.4.1 && < 1.5
 - directory >= 1.3 && < 1.4
 - unix-compat >= 0.5 && < 0.6
-- deepseq
+- deepseq >= 1.4 && < 2
+- safe-exceptions >= 0.1.5 && < 2
 
 ghc-options:
 - -rtsopts=all
@@ -184,16 +187,25 @@ executables:
     - singletons-th > 3 && < 4
     - singletons-base >= 3 && < 4
     - http-client > 0.7
+    - http-types > 0.10.0 && < 0.20.0
+    - http-media > 0.6 && < 0.10
     - servant-server > 0.19 && < 0.30
     - servant-client > 0.18 && < 0.30
     - servant-blaze > 0.9 && < 0.12
     - warp > 3.3 && < 4
+    - wai > 3.0 && < 4
+    - wai-extra > 3.1 && < 4
     - fin > 0.2 && < 0.3
     - dec > 0.0.4 && < 1
     - free > 5.1 && < 6
     - tasty >= 0.11 && < 1.6
     - tasty-hspec >= 1.1 && < 1.3
     - hspec >= 0.1 && <= 3
+    - stm >= 2.5 && < 3
+    - lens >= 5 && < 6
+    - streaming > 0.2 && <0.3
+    - streaming-utils > 0.2 && < 0.3
+    - streaming-bytestring > 0.2 && < 0.3
 
   rpc-lib:
     main:               main.hs
@@ -308,14 +320,14 @@ executables:
     - streaming > 0.2 && <0.3
     - streaming-utils > 0.2 && < 0.3
     - streaming-bytestring > 0.2 && < 0.3
-    - lens > 4.15
+    - lens >= 5 && < 6
 
   lens:
     main:               main.hs
     source-dirs:        ./src/lens
     dependencies:
     - haskellInDepthGHC9
-    - lens > 4.15
+    - lens >= 5 && < 6
     - fin > 0.2 && < 0.3
     - dec > 0.0.4 && < 1
     - singletons > 3 && < 4
@@ -384,7 +396,7 @@ tests:
     - streaming > 0.2 && <0.3
     - streaming-utils > 0.2 && < 0.3
     - streaming-bytestring > 0.2 && < 0.3
-    - lens > 4.15
+    - lens >= 5 && < 6
 
   du-test: 
     main:               Spec.hs
@@ -563,7 +575,7 @@ tests:
     - streaming-utils > 0.2 && < 0.3
     - streaming-bytestring > 0.2 && < 0.3
     - hspec >= 0.1 && <= 3
-    - lens > 4.15
+    - lens >= 5 && < 6
 
     # testing
     - tasty >= 0.11 && < 1.6
@@ -596,7 +608,7 @@ tests:
     source-dirs:        ./test/lens
     dependencies:
     - haskellInDepthGHC9
-    - lens > 4.15
+    - lens >= 5 && < 6
     - fin > 0.2 && < 0.3
     - dec > 0.0.4 && < 1
     - singletons > 3 && < 4
@@ -642,7 +654,7 @@ benchmarks:
     - streaming > 0.2 && <0.3
     - streaming-utils > 0.2 && < 0.3
     - streaming-bytestring > 0.2 && < 0.3
-    - lens > 4.15
+    - lens >= 5 && < 6
     - criterion >= 1.5.12 && < 2
 
   iplookup-benchmark:
