--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -177,6 +177,7 @@ executables:
     - haskellInDepthGHC9
     - random
     - aeson >= 2 && <3
+    - vector >= 0.1 && < 1
     - criterion >= 1.5.12 && < 2
     - timeit >= 2.0 && < 3
     - attoparsec > 0.10 && < 0.20
@@ -201,6 +202,7 @@ executables:
     - tasty >= 0.11 && < 1.6
     - tasty-hspec >= 1.1 && < 1.3
     - hspec >= 0.1 && <= 3
+    - hedgehog >= 0.5 && < 1.2
     - stm >= 2.5 && < 3
     - lens >= 5 && < 6
     - streaming > 0.2 && <0.3
@@ -435,6 +437,7 @@ tests:
       - tasty-hedgehog >= 0.1 && <= 1.4
       - hspec >= 0.1 && <= 3
       - hedgehog >= 0.5 && < 1.2
+      - lens >= 5 && < 6
     ghc-options:
       - -Wno-type-defaults
     default-extensions:
