Upgrade to GHC 9.4.7

--- a/haskell/haskellInDepthGHC9/stack.yaml
+++ b/haskell/haskellInDepthGHC9/stack.yaml
@@ -1,8 +1,10 @@
-resolver: nightly-2022-11-05
-compiler: ghc-9.2.5
+# GHC 9.4.7
+resolver: lts-21.17
 
 packages:
 - .
+
+allow-newer: true
 
 extra-deps: 
 - streaming-utils-0.2.3.0@sha256:932c804c55c261e0d98fe0288fa11936ba972af9ff1f3758e8b2de5852b1a321,4093
