--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,7 @@ jobs:
         uses: actions/checkout@v3
       - uses: haskell/actions/setup@v2
         with:
-          ghc-version: '9.0.1' # Resolves to the latest point release of GHC 8.8
+          ghc-version: '9.4.7'
           cabal-version: '3.8' # Exact version of Cabal
 
       - name: Install main
